src/style/index.css
/* ... */
.accounts::-webkit-scrollbar-track, .pad-pickups::-webkit-scrollbar-track, .modal__content::-webkit-scrollbar-track, .feedback-scroll-box::-webkit-scrollbar-track {
    background: rgba(255, 255, 255, 0.03);
    padding: 0 3px;
}

.accounts::-webkit-scrollbar-thumb, .pad-pickups::-webkit-scrollbar-thumb, .modal__content::-webkit-scrollbar-thumb, .feedback-scroll-box::-webkit-scrollbar-thumb {
    background-color: rgba(220, 220, 220, 0.5);
    border-radius: 20px;
    border: 3px solid rgba(255, 255, 255, 0.03);
}

.arrow {
    position: absolute;
    top: 10px;
    left: 50%;
    transform: translate(-50%, -50%) rotate(180deg);
    transition: opacity 0.5s ease-out;
}

.accounts-card:hover .arrow {
    opacity: 0;
}

.pad-pickups-card:hover .arrow {
    opacity: 0;
}

.arrow span {
    display: block;
    width: 15px;
    height: 15px;
    border-bottom: 3px solid #aeaeae;
    border-right: 3px solid #aeaeae;
    transform: rotate(-90deg);
    margin: -10px;
    animation: animate-arrow 2s infinite;
}

.arrow span:nth-child(2) {
    animation-delay: -0.2s;
}

.arrow span:nth-child(3) {
    animation-delay: -0.4s;
}

.pad-pickup-button {
    right: 0;
    position: absolute;
    margin: 1em;
    min-width: 120px;
    width: 131px;
    font-weight: bold;
    font-size: 0.95rem;
    font-family: 'Trebuchet MS', sans-serif;
    text-transform: uppercase;
    text-align: center;
    padding: 6px 13px;
    border-radius: 10px;
    letter-spacing: -1px;
    color: white;
    border: none;
    /* background: #5a99d4; */
    /* background: #333538; */
    background-color: #421022;
    cursor: pointer;
    box-shadow: 0 0 0 0 rgb(66 16 34 / 50%);
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.pulse {
    -webkit-animation: pulse 1.5s infinite;
    animation: pulse 1.5s infinite;
}

.pulse:hover {
    -webkit-animation: none;
    animation: none
}

.drawer {
    position: absolute;
    bottom: 0;
    right: 0;
    height: 100vh;
    width: 100vw;
    visibility: hidden;
    content-visibility: visible;
    overflow-x: hidden;
}

.drawer.show .drawer__backdrop, .drawer.show .drawer__body {
    right: 0;
    visibility: visible;
}

.drawer__backdrop, .drawer__body {
    background-color: rgba(0, 0, 0, 0.4);
    height: 100vh;
    width: 100vw;
    margin: 0;
    padding: 0;
    position: inherit;
    bottom: 0;
    right: -105vw;
}

.drawer__backdrop {
    cursor: pointer;
}

.drawer__body {
    transition: right 0.4s ease-in-out;
    background: rgba( 0, 0, 0, 0.10);
    box-shadow: none;
    backdrop-filter: blur( 10.5px);
    -webkit-backdrop-filter: blur( 5.5px);
    border: 1px solid rgba( 255, 255, 255, 0.09);
    color: white;
    z-index: 3000;
}

.feedback-form {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

.feedback__body {
    min-height: calc(100% - 220px);
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
}

.feedback-form>button[type="submit"] {
    width: 150px;
    height: 37px;
    margin: 1em 0;
    margin-top: 15px;
    text-align: center;
    font-size: 14px;
    font-family: "Open Sans", sans-serif;
    font-weight: bold;
    padding: 12px 0;
    color: #fff;
    margin-bottom: 5px;
    border-radius: 10px;
    cursor: pointer;
    position: relative;
    background-color: rgba(255, 255, 255, 0.2);
}

.feedback-form__button--glasmorphism {
    background: rgba(255, 255, 255, 0.05);
    backdrop-filter: blur(10px);
    border-top: 2px solid rgba(255, 255, 255, 0.2);
    border-left: 2px solid rgba(255, 255, 255, 0.2);
    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
    text-transform: uppercase;
    border: none;
}

.feedback__input--glassmorphism {
    background: rgba( 0, 0, 0, 0.10);
    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
    backdrop-filter: blur( 5.5px);
    -webkit-backdrop-filter: blur( 5.5px);
    border-radius: 10px;
    border: 1px solid rgba( 255, 255, 255, 0.09);
}

.feedback-form textarea, .feedback-form .feedback__name-input {
    font-family: "Open Sans", Calibri, Arial, sans-serif;
    font-size: 14px;
    font-weight: 400;
    padding: 10px;
    position: relative;
    border: none;
    border-left: 2px solid rgba(255, 255, 255, 0.2);
    border-top: 2px solid rgba(255, 255, 255, 0.2);
    color: rgb(255, 255, 255);
    outline: none;
    transition: color 0.3s ease-out;
    width: 327px;
    background-color: rgba(255, 255, 255, 0.04);
}

.feedback-form .feedback__name-input {
    margin: 10px 0 10px 0;
}

.feedback-form textarea {
    height: 80px;
    resize: none;
}

@media screen and (min-width: 480px) {
    .drawer__body {
        max-width: 390px;
        box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
        /* background-color: rgba( 255, 255, 255, 0.8); */
    }
}

@keyframes pulse {
    0% {
        -moz-transform: scale(0.9);
        -ms-transform: scale(0.9);
        -webkit-transform: scale(0.9);
        transform: scale(0.9);
    }
    70% {
        -moz-transform: scale(1);
        -ms-transform: scale(1);
        -webkit-transform: scale(1);
        transform: scale(1);
        box-shadow: 0 0 0 50px rgba(66, 16, 34, 0);
    }
    100% {
        -moz-transform: scale(0.9);
        -ms-transform: scale(0.9);
        -webkit-transform: scale(0.9);
        transform: scale(0.9);
        box-shadow: 0 0 0 0 rgba(66, 16, 34, 0);
    }
}

@keyframes animate-arrow {
    0% {
        opacity: 0;
        transform: rotate(45deg) translate(-10px, -10px);
    }
    50% {
        opacity: 1;
    }
    100% {
        opacity: 0;
        transform: rotate(45deg) translate(10px, 10px);
    }
}
/* ... */

